--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,55 +3,52 @@ version: "3.7"
 services:
   app:
     image: alswl/excalidraw:v0.18.0-fork-b1
+    container_name: excalidraw-app
     restart: unless-stopped
-    environment:
-      # If deploying to VPS, replace 'localhost' with your Domain/IP
-      - VITE_APP_BACKEND_V2_URL=http://localhost:8090/api/v2
-      - VITE_APP_BACKEND_V2_GET_URL=http://localhost:8090/api/v2/scenes/
-      - VITE_APP_BACKEND_V2_POST_URL=http://localhost:8090/api/v2/scenes/
-      - VITE_APP_HTTP_STORAGE_BACKEND_URL=http://localhost:8090/api/v2
-      - VITE_APP_STORAGE_BACKEND=http
-      - VITE_APP_WS_SERVER_URL=ws://localhost:8091/
-      - VITE_APP_FIREBASE_CONFIG={}
-      - VITE_APP_DISABLE_TRACKING=true
-      - PUBLIC_URL=http://localhost:8080
     ports:
       - "8080:80"
+    environment:
+      - VITE_APP_BACKEND_V2_URL=http://localhost:8090/api/v2
+      - VITE_APP_WS_SERVER_URL=ws://localhost:8091/
     networks:
       - draw-internal
 
   storage:
     image: alswl/excalidraw-storage-backend:v2023.11.11
+    container_name: excalidraw-storage
     restart: unless-stopped
+    ports:
+      - "8090:8080"
     environment:
       - STORAGE_URI=mongodb://${DB_USER}:${DB_PASS}@mongodb:27017
     networks:
       - draw-internal
-    ports:
-      - "8090:8080"
 
   room:
     image: excalidraw/excalidraw-room:sha-49bf529
+    container_name: excalidraw-room
     restart: unless-stopped
-    networks:
-      - draw-internal
     ports:
       - "8091:80"
+    networks:
+      - draw-internal
 
   mongodb:
     image: mongo:7.0.5-jammy
+    container_name: excalidraw-db
     restart: unless-stopped
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${DB_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${DB_PASS}
     volumes:
-      - ${DB_VOLUME_PATH}:/data/db
-      - ${MONGO_DUMP_PATH}:/data/dump
+      - ./mongo-data:/data/db
+      - ./mongo-dumps:/data/dump
     networks:
       - draw-internal
 
   mongoexpress:
     image: mongo-express:latest
+    container_name: excalidraw-admin
     restart: unless-stopped
     depends_on:
       - mongodb
@@ -68,4 +65,3 @@ services:
 networks:
   draw-internal:
     name: draw-internal
-    external: false
